@@ -6,20 +6,20 @@ my $build = Module::Build->new(
 	license => 'perl',
 	dist_author => 'MacGyveR <dumb@cpan.org>',
 	requires => {
-		"CGI::Thin::Cookies" => "",
-		"HTTP::Response" => "",
-		"CGI" => "",
-		"Carp" => "",
-		"Digest::MD5" => "",
-		"File::Basename" => "",
-		"Data::Dumper" => "",
-		"Template" => ""
+		"CGI::Thin::Cookies" => 0,
+		"HTTP::Response" => 0,
+		"CGI" => 0,
+		"Carp" => 0,
+		"Digest::MD5" => 0,
+		"File::Basename" => 0,
+		"Data::Dumper" => 0,
+		"Template" => 0
 	},
 	build_requires => {
-		"Test::More" => "",
-		"HTTP::Daemon" => "",
-		"HTTP::Status" => "",
-		"HTTP::Response" => "",
+		"Test::More" => 0,
+		"HTTP::Daemon" => 0,
+		"HTTP::Status" => 0,
+		"HTTP::Response" => 0,
 	},
 	create_makefile_pl => 'traditional'
 );
