@@ -1,4 +1,4 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.2808_01
+# Note: this file was auto-generated by Module::Build::Compat version 0.3603
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
@@ -8,17 +8,17 @@ WriteMakefile
           'EXE_FILES' => [],
           'VERSION_FROM' => 'lib/CGI/Mungo.pm',
           'PREREQ_PM' => {
-                           'Data::Dumper' => '',
-                           'Template' => '',
-                           'HTTP::Status' => '',
-                           'CGI' => '',
-                           'Carp' => '',
-                           'CGI::Thin::Cookies' => '',
-                           'Test::More' => '',
-                           'HTTP::Response' => '',
-                           'Digest::MD5' => '',
-                           'HTTP::Daemon' => '',
-                           'File::Basename' => ''
+                           'Data::Dumper' => 0,
+                           'Template' => 0,
+                           'HTTP::Status' => 0,
+                           'CGI' => 0,
+                           'Carp' => 0,
+                           'CGI::Thin::Cookies' => 0,
+                           'Test::More' => 0,
+                           'HTTP::Response' => 0,
+                           'Digest::MD5' => 0,
+                           'HTTP::Daemon' => 0,
+                           'File::Basename' => 0
                          }
         )
 ;
