@@ -1,6 +1,9 @@
 <html>
 	<body>
 		<h1>Error!</h1>
+		<p>Simple template: </p>
 		<pre><!--message--></pre>
+		<p>Template toolkit: </p>
+		<pre>[% message %]</pre>
 	</body>
 </html>
